# astroprism

./: CLAUDE.md  README.md  pyproject.toml
a3/82177faef6/: metadata.json
a3/82177faef6/0/: content_hash.txt  metadata.json  prompt.txt
af/e92c0bd51a/: metadata.json
af/e92c0bd51a/0/: content_hash.txt  metadata.json  prompt.txt
c1/4cd33a008f/: metadata.json
c1/4cd33a008f/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
configs/: default.yaml
examples/: 08_full_pipeline.ipynb  09_multi_instrument_pipeline.ipynb  10_full_pipeline.ipynb  11_posterior_results.ipynb
src/astroprism/: __init__.py  _version.py
src/astroprism/configs/: default.yaml
src/astroprism/inference/: __init__.py  vi.py
src/astroprism/io/: __init__.py  dataset.py  instrument_loaders.py  results.py
src/astroprism/models/: __init__.py  field.py  forward.py  gp.py  likelihood.py  noise.py  response.py  signal.py
src/astroprism/operators/: __init__.py  convolution.py  reprojection.py
src/astroprism/scripts/: __init__.py  run.py
src/astroprism/utils/: __init__.py  config.py  masking.py  priors.py
